<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:background="@drawable/homebackground"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="50dp"
    android:paddingBottom="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
        android:layout_weight="1">

    <LinearLayout

        android:onClick="donateblood"
        android:id="@+id/card01"
        android:background="@drawable/homemenusback"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView

                android:layout_marginTop="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/bg1"
                android:padding="10dp"
                android:src="@drawable/ic_donate_invert_colors_black_24dp" />

            <TextView
                android:paddingBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/action01"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"></View>

            <TextView
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dis1" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout

        android:onClick="finddonor"
        android:id="@+id/card02"
        android:background="@drawable/homemenusback"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView

                android:layout_marginTop="10dp"
                android:layout_width="50dp"

                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/bg1"
                android:padding="10dp"
                android:src="@drawable/ic_search_black_24dp" />

            <TextView
                android:paddingBottom="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/action02"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorDivider"></View>

            <TextView
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dis2" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout

            android:onClick="profilecard"
            android:id="@+id/card03"
            android:background="@drawable/homemenusback"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView

                    android:layout_marginTop="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg1"
                    android:padding="10dp"
                    android:src="@drawable/ic_account_circle_black_24dp" />

                <TextView
                    android:paddingBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/action03"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider"></View>

                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dis3" />

                <LinearLayout
                    android:gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:textSize="10sp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:onClick="logoutbtn"
                        android:text="LOG out"
                        android:textColor="@color/colorWhite"
                        android:background="@drawable/whitebuttonback"
                        android:layout_width="60sp"
                        android:layout_height="25dp"/>
                </LinearLayout>




            </LinearLayout>


        </LinearLayout>


        <LinearLayout

            android:onClick="bloodmatch"
            android:id="@+id/card04"
            android:background="@drawable/homemenusback"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView

                    android:layout_marginTop="10dp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg1"
                    android:padding="10dp"
                    android:src="@drawable/ic_group_black_24dp" />

                <TextView
                    android:paddingBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/action04"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorDivider"></View>

                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dis4" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>











</LinearLayout>